# simmy

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/exe1/: CMakeLists.txt  exe1.cpp
src/exe2/: CMakeLists.txt  exe2.cpp
src/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
